feat: add menus

--- a/apps/web/src/global.css
+++ b/apps/web/src/global.css
@@ -8,6 +8,42 @@
 
 	--font-sans: var(--font-roboto);
 	--font-serif: var(--font-martel);
+
+
+
+
+	--color-tibia-100: #051122;
+	--color-tibia-200: #0d2e2b;
+	--color-tibia-300: #194440;
+	--color-tibia-400: #debb9d;
+	--color-tibia-500: #fff2db;
+	--color-tibia-600: #d4c0a1;
+	--color-tibia-700: #5f4d41;
+	--color-tibia-800: #f1e0c5;
+	--color-tibia-900: #f1e0c6;
+	--color-tibia-1000: #d5c0a1;
+	--color-tibia-1100: #ebcaa3;
+	
+	--color-primary: #ffd698;
+	--color-secondary: #5a2800;
+	--color-tertiary: #4b7874;
+	--color-quaternary: #3a3738;
+	--color-quintenary: #793d03;
+	--color-senary: #55636c;
+	--color-septenary: #faf0d7;
+	--color-octonary: #5f4d41;
+
+
+
+
+	--color-error: #c91b1b;
+  --color-success: #2e7d32;
+  --color-warning: #f57c00;
+  --color-info: #1976d2;
+
+
+	--text-shadow-title: -1px -1px 0 #000, 1px -1px 0 #2c2c2c, -1px 1px 0 #000, 1px 1px 0 #000;
+
 }
 
 @layer base {
@@ -17,7 +53,24 @@
 	}
 }
 
+
 @layer utilities {
+
+
+	
+	.hover\:filter-hover:hover {
+		@apply brightness-110;
+		@apply contrast-110;
+		@apply saturate-110;
+	}
+
+	.fondamento-title {
+		@apply font-fondamento;
+		@apply font-medium;
+		@apply text-shadow-title;
+		@apply text-primary;
+	}
+
 	.layout-main {
 		@apply flex;
 		@apply flex-col;
