feat: add information section

--- a/apps/web/src/global.css
+++ b/apps/web/src/global.css
@@ -1,10 +1,47 @@
 @import "tailwindcss";
 
+/* 400 normal */
+@font-face {
+  font-family: "Verdana Custom";
+  src: url("/assets/fonts/verdana/Verdana.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+/* 400 italic */
+@font-face {
+  font-family: "Verdana Custom";
+  src: url("/assets/fonts/verdana/Verdana-Italic.ttf") format("truetype");
+  font-weight: 400;
+  font-style: italic;
+  font-display: swap;
+}
+
+/* 700 bold */
+@font-face {
+  font-family: "Verdana Custom";
+  src: url("/assets/fonts/verdana/Verdana-Bold.ttf") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+/* 700 bold italic */
+@font-face {
+  font-family: "Verdana Custom";
+  src: url("/assets/fonts/verdana/Verdana-BoldItalic.ttf") format("truetype");
+  font-weight: 700;
+  font-style: italic;
+  font-display: swap;
+}
+
 @theme {
 	--font-fondamento: "Fondamento", cursive;
 	--font-martel: "Martel", serif;
 	--font-poppins: "Poppins", sans-serif;
 	--font-roboto: "Roboto", sans-serif;
+	--font-verdana: "Verdana Custom", sans-serif;
 
 	--font-sans: var(--font-roboto);
 	--font-serif: var(--font-martel);
@@ -34,6 +71,8 @@
 	--color-success: #2e7d32;
 	--color-warning: #f57c00;
 	--color-info: #1976d2;
+
+	--text-xxs: 0.625rem; /* 10px */
 
 	--text-shadow-title:
 		-1px -1px 0 #000, 1px -1px 0 #2c2c2c, -1px 1px 0 #000, 1px 1px 0 #000;
